# friend-library

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  spec.md
static/css/: style.css
stuff4friends/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
