[project]
name = "stuff4friends"
version = "0.1.0"
description = "A lending library for sharing stuff with friends"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "django-htmx>=1.21,<2.0",
    "whitenoise>=6.8,<7.0",
    "pillow>=11.0,<12.0",
    "django-browser-reload>=1.17,<2.0",
    "gunicorn>=23.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "factory-boy>=3.3,<4.0",
    "playwright>=1.49,<2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stuff4friends.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
